Fixed header spacing issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3793,7 +3793,7 @@
 		display: -ms-flex;
 		display: flex;
 		border-bottom: solid 5px #6A6AF5;
-		padding: 6em 0 1em 0;
+		padding: 2.5em 0 1em 0;
 		position: relative;
 	}
 
